Fix output result list 2.0

--- a/src/Styles.fxml
+++ b/src/Styles.fxml
@@ -6,11 +6,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
    <children>
-      <TextArea layoutX="248.0" layoutY="14.0" prefHeight="309.0" prefWidth="338.0" promptText="Your table is here" wrapText="true" fx:id="showTable"/>
-      <TextField layoutX="14.0" layoutY="40.0" prefHeight="34.0" prefWidth="211.0" promptText="Enter SQL query" fx:id="sqlQuery"/>
-      <Button layoutX="14.0" layoutY="88.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" text="Execute" fx:id="btnExecute" />
+      <TextArea fx:id="showTable" layoutX="248.0" layoutY="14.0" prefHeight="309.0" prefWidth="338.0" promptText="Your table is here" wrapText="true" />
+      <TextField fx:id="sqlQuery" layoutX="248.0" layoutY="339.0" prefHeight="34.0" prefWidth="211.0" promptText="Enter SQL query" />
+      <Button fx:id="btnExecute" layoutX="508.0" layoutY="339.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" text="Execute" />
+      <TextField layoutX="14.0" layoutY="14.0" prefHeight="20.0" prefWidth="198.0" promptText="Enter database address" />
+      <TextField layoutX="14.0" layoutY="49.0" prefHeight="25.0" prefWidth="198.0" promptText="Enter login" />
+      <TextField layoutX="14.0" layoutY="86.0" prefHeight="25.0" prefWidth="198.0" promptText="Enter password" />
+      <Button layoutX="152.0" layoutY="118.0" mnemonicParsing="false" text="Connect" />
+      <TableView layoutX="13.0" layoutY="169.0" prefHeight="200.0" prefWidth="200.0" fx:id="TableList" >
+        <columns>
+          <TableColumn prefWidth="198.0" text="Tables" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
