--- a/src/Styles.fxml
+++ b/src/Styles.fxml
@@ -11,10 +11,10 @@
       <TextArea fx:id="showTable" layoutX="248.0" layoutY="14.0" prefHeight="309.0" prefWidth="338.0" promptText="Your table is here" wrapText="true" />
       <TextField fx:id="sqlQuery" layoutX="248.0" layoutY="339.0" prefHeight="34.0" prefWidth="211.0" promptText="Enter SQL query" />
       <Button fx:id="btnExecute" layoutX="508.0" layoutY="339.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="78.0" text="Execute" />
-      <TextField fx:id="address" layoutX="14.0" layoutY="14.0" prefHeight="20.0" prefWidth="198.0" promptText="Enter database address" />
+      <TextField fx:id="address" layoutX="14.0" layoutY="14.0" prefHeight="20.0" prefWidth="198.0" promptText="address" />
       <TextField fx:id="loginDB" layoutX="14.0" layoutY="49.0" prefHeight="25.0" prefWidth="198.0" promptText="Enter login" />
       <TextField fx:id="pwdDB" layoutX="14.0" layoutY="86.0" prefHeight="25.0" prefWidth="198.0" promptText="Enter password" />
       <Button fx:id="connect" layoutX="152.0" layoutY="118.0" mnemonicParsing="false" text="Connect" />
-      <TextArea layoutX="25.0" layoutY="122.0" prefHeight="17.0" prefWidth="88.0" fx:id="state"/>
+      <TextArea fx:id="state" layoutX="25.0" layoutY="118.0" prefHeight="25.0" prefWidth="109.0"  />
    </children>
 </AnchorPane>
